@@ -1,4 +1,5 @@
 0.9.1
+   - bug [8758] "ComparablePair.compareTo throws java.lang.ClassCastException when called with incompatible ComparablePair."
    - bug [9338] "Tabellerne i ES-basen skal låses i vise tilfælde når harvesteren forespørger i den"
    - bug [9512] "ESHarvester skal benytte ES-diagnostics"
    - bug [9639] "setStatus i harvester interfacet skal ændres til tre forskellige setStatusXXX-metoder"
